--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: assets/images/Screenshot 2024-07-14 111133.png
 show_downloads: True
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
--jekyll-remote-theme
+:-jekyll-remote-theme
