--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: John Paul
+title: jpkintu
 logo: assets/images/Screenshot 2024-07-14 111133.png
 show_downloads: True
 remote_theme: pages-themes/minimal@v0.2.0
